- Added line numbers color customization to palette.css - Fixed another scroll bug - Fixed line numbers being skipped if a line ends with a whitespace

--- a/static/palette.css
+++ b/static/palette.css
@@ -21,6 +21,7 @@
   --editor-bg: #08080c;
   --text-color: #aaaaaa;
   --caret-color: #ffffff;
+  --line-numbers: #646464;
   --border: #646464;
   --light-border: #3e4556;
   --hover: #113b62;
